feat: use local osmd

--- a/demos/umd-local/index.html
+++ b/demos/umd-local/index.html
@@ -18,7 +18,7 @@
       </div>
       <div id="score"></div>
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/opensheetmusicdisplay@0.8.5/build/opensheetmusicdisplay.min.js"></script>
+    <script src="./opensheetmusicdisplay.min.js"></script>
     <script src="../../umd/OsmdAudioPlayer.min.js"></script>
     <script src="app.js"></script>
   </body>
